--- a/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
@@ -26,19 +26,19 @@
 
 
         <Grid Grid.Column="0" Grid.Row="0">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Name:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Име:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="1">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">MiddleName:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Презиме:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">LastName:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Фамилия:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="3">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Contact:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Контакт:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="4">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">ProfessionalExperience:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Професионален стаж:</TextBlock>
         </Grid>
 
 
@@ -62,8 +62,8 @@
 
         <Grid Grid.Column="2" Grid.Row="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Add Dentist" Command="{Binding AddDentist}" Height="20" Width="90"/>
-                <Button Content="Cancel" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
+                <Button Content="Добави" Command="{Binding AddDentist}" Height="20" Width="90"/>
+                <Button Content="Отказ" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
             </StackPanel>
         </Grid>
 
