--- a/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
@@ -59,7 +59,7 @@
                     <Button Height="30" Command="{Binding NavigateToAddPatient}" Background="Transparent" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal"> <!--Margin="10,0,15,0">-->
                             <Image Height="20" VerticalAlignment="Center" Source="/Resources/add.png"></Image>
-                            <TextBlock FontSize="11.5" Text="Add Patient" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
+                            <TextBlock FontSize="11.5" Text="Добави пациент" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
                         </StackPanel>
                     </Button>
                     <!--<Button Height="30" Command="{Binding DeletePatient}" Background="Transparent" BorderBrush="Transparent">
@@ -81,43 +81,44 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition MaxWidth="170" x:Name="MenuColumn"></ColumnDefinition>
+                <ColumnDefinition MaxWidth="0" x:Name="MenuColumn"></ColumnDefinition>
                 <ColumnDefinition Width="3"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition ></RowDefinition>
             </Grid.RowDefinitions>
+            
             <Grid Grid.Column="0">
                 <StackPanel>
                     <Button Command="{Binding NavToHome}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/0.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Home</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Начало</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Command="{Binding NavToPatients}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/1.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Patients</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Пациенти</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Command="{Binding NavToDentists}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/2.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Dentists</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Зъболекари</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Command="{Binding NavToOrders}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/3.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Orders</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Поръчки</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Command="{Binding NavToActivities}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/4.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Activities</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности</TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -140,15 +141,15 @@
                 <Grid Grid.Column="0">
                     <StackPanel>
 
-                        <Button Command="{Binding DisplayPatient}" Margin="5,0,3,0" Content="Покажи данни за избрания пациент"></Button>
+                        <Button Command="{Binding DisplayPatient}" Margin="5,3,2,3" Content="Покажи данни за избрания пациент"></Button>
 
                         <ListView ItemsSource="{Binding Patients}" IsSynchronizedWithCurrentItem="True"  SelectedItem="{Binding SelectedPatient, Mode=TwoWay}">
                             <ListView.View>
                                 <GridView>
                                     <GridView.Columns>
-                                        <GridViewColumn Header="FirstName" DisplayMemberBinding="{Binding FirstName}"/>
-                                        <GridViewColumn Header="Surname" DisplayMemberBinding="{Binding Surname}"/>
-                                        <GridViewColumn Header="Family" DisplayMemberBinding="{Binding Family}"/>
+                                        <GridViewColumn Header="Име" DisplayMemberBinding="{Binding FirstName}"/>
+                                        <GridViewColumn Header="Презиме" DisplayMemberBinding="{Binding Surname}"/>
+                                        <GridViewColumn Header="Фамилия" DisplayMemberBinding="{Binding Family}"/>
                                         
                                         <!--DA SE IZTRIE PATIENT PAGE ZASHTOTO E NENUJEN-->
                                         <!--<GridViewColumn Header="View">
@@ -182,7 +183,7 @@
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0">
                             <StackPanel>
-                                <Button Command="{Binding DeletePatient}" Margin="2,0,5,0" Content="Изтрий избрания пациент"></Button>
+                                <Button Command="{Binding DeletePatient}" Margin="2,3,5,3" Content="Изтрий избрания пациент"></Button>
 
                                 <Image Height="400" Margin="10" Source="/Resources/1.png" ></Image> <!--Source="{Binding SelectedPatient.PortraitPicPath}"-->
 
